--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta name="og:type" property="og:type" content="website" />
     <meta name="og:site_name" property="og:site_name" content="BaliBike" />
     <meta name="og:title" property="og:title" content="BaliBike" />
-    <meta name="og:description" property="og:description" content="Rent a bike on Bali" />
-    <meta name="og:image" property="og:image" content="images/iphone.png" />
+    <meta name="og:description" property="og:description" content="Find bikes for rent on Bali" />
+    <meta name="og:image" property="og:image" content="images/preview.png" />
     <meta name="og:image:type" property="og:image:type" content="image/png" />
-    <meta name="og:image:width" property="og:image:width" content="509" />
-    <meta name="og:image:height" property="og:image:height" content="935" />
+    <meta name="og:image:width" property="og:image:width" content="1200" />
+    <meta name="og:image:height" property="og:image:height" content="630" />
     <link rel="stylesheet" href="main.css" />
 </head>
 
