Change description tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>BaliBike</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <meta name="description" content="Rent a bike on Bali" />
+    <meta name="description" content="Find bikes for rent on Bali" />
     <meta name="keywords" content="BaliBike, bike, bali, rent" />
     <meta name="og:locale" property="og:locale" content="en_US" />
     <meta name="og:type" property="og:type" content="website" />
