--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a href="#">
         <img alt="" src="images/badgeappstore.png"/>
       </a>
-      <a href="">
+      <a href="https://play.google.com/store/apps/details?id=app.balibike">
         <img alt="" src="images/badgegoogleplay.png"/>
       </a>
     </div>
