--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>BaliBike</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <meta name="description" content="Find bikes for rent on Bali" />
-    <meta name="keywords" content="BaliBike, bike, bali, rent" />
-    <meta name="og:locale" property="og:locale" content="en_US" />
-    <meta name="og:type" property="og:type" content="website" />
-    <meta name="og:site_name" property="og:site_name" content="BaliBike" />
-    <meta name="og:title" property="og:title" content="BaliBike" />
-    <meta name="og:description" property="og:description" content="Find bikes for rent on Bali" />
-    <meta name="og:image" property="og:image" content="images/preview.png" />
-    <meta name="og:image:type" property="og:image:type" content="image/png" />
-    <meta name="og:image:width" property="og:image:width" content="1200" />
-    <meta name="og:image:height" property="og:image:height" content="630" />
-    <link rel="stylesheet" href="main.css" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137262846-1"></script>
+  <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
+
+   gtag('config', 'UA-137262846-1');
+  </script>
+
+  <meta charset="utf-8" />
+  <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <title>BaliBike</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <meta name="description" content="Find bikes for rent on Bali" />
+  <meta name="keywords" content="BaliBike, bike, bali, rent" />
+  <meta name="og:locale" property="og:locale" content="en_US" />
+  <meta name="og:type" property="og:type" content="website" />
+  <meta name="og:site_name" property="og:site_name" content="BaliBike" />
+  <meta name="og:title" property="og:title" content="BaliBike" />
+  <meta name="og:description" property="og:description" content="Find bikes for rent on Bali" />
+  <meta name="og:image" property="og:image" content="images/preview.png" />
+  <meta name="og:image:type" property="og:image:type" content="image/png" />
+  <meta name="og:image:width" property="og:image:width" content="1200" />
+  <meta name="og:image:height" property="og:image:height" content="630" />
+  <link rel="stylesheet" href="main.css" />
 </head>
 
 <body>
